# File-Processing

./: .gitignore  alembic.ini  emails.csv  emails_with_names.json  pyproject.toml
alembic/: env.py
alembic/versions/: 28b51ff49007_created_file_records_table.py  47bbb413829a_added_eta_seconds_column_in_jobs.py  75ec22e01765_created_intial_job_batch_and_items_table.py
app/: main.py
app/api/v1/: __init__.py
app/api/v1/routes/: file.py  ingestions.py
app/core/: celery_app.py  config.py  deps.py
app/crud/: crud_batch.py  crud_event.py  crud_item.py  crud_job.py
app/db/: db_connection.py  models.py
app/schemas/: file.py
app/storage/: local_storage.py
app/workers/: progress.py  tasks.py
